src/objects/SB_Cuenta_Interlocutor__c.object
<CustomObject>
    <fields>
        <fullName>Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SB - Cuenta - Interlocutores</relationshipLabel>
        <relationshipName>SB_Cuenta_Interlocutores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SB - Cuenta - Interlocutores</relationshipLabel>
        <relationshipName>SB_Cuenta_Interlocutores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Ball_Interlocutor__c</fullName>
        <label>Super Ball - Interlocutor</label>
        <referenceTo>Super_Ball_Interlocutor__c</referenceTo>
        <relationshipLabel>SB - Cuenta - Interlocutores</relationshipLabel>
        <relationshipName>SB_Cuenta_Interlocutores</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Super_Ball_Nodo__c</fullName>
        <label>Super Ball - Nodo</label>
        <referenceTo>Super_Ball_Nodo__c</referenceTo>
        <relationshipLabel>SB - Cuenta - Interlocutores</relationshipLabel>
        <relationshipName>SB_Cuenta_Interlocutores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SB - Cuenta - Interlocutor</label>
    <nameField>
        <label>Nombre de SB - Cuenta - Interlocutor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SB - Cuenta - Interlocutores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>